Setup notes get, create and delete
