# backend/src/main/kotlin/com/violet/features/notes/models/CreateNoteRequest.kt
@@ -3,8 +3,7 @@ package com.violet.features.notes.models
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class NoteResponse(
-    val id: Int,
+data class CreateNoteRequest(
     val title: String,
     val body: String
 )
